# amor-openrave-models

./: CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/templates/: AMOR_OPENRAVE_MODELSConfig.cmake.in
doc/: amor-openrave-models-install.md
openrave/models/: amor.kinbody.xml  amor.robot.xml  amor_clean.env.xml
openrave/models/stls/: amor01.stl  amor02.stl  amor03.stl  amor04.stl  amor05.stl  amor06.stl  amor07.stl  amorGripper.stl
